--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "moment": "^2.29.4",
+    "moment-weekdaysin": "^1.0.1",
     "mongoose": "^6.9.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
